--- a/app/src/main/res/layout/activity_sleep_advice.xml
+++ b/app/src/main/res/layout/activity_sleep_advice.xml
@@ -10,15 +10,15 @@
 
     <TextView
         android:id="@+id/textview_advicewakeuphour"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        android:textAlignment="center"
         android:textColor="@color/colorAcc"
         android:textSize="20sp"
         android:textStyle="italic|bold"
-        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_selectgotosleep" />
@@ -32,7 +32,6 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_gotosleep" />
 
@@ -65,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/i_want_to_wake_up_at"
         android:textColor="@color/colorPrimaryDark"
@@ -97,21 +96,20 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_wakeup" />
 
     <TextView
         android:id="@+id/textview_advicesleephour"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        android:textAlignment="center"
         android:textColor="@color/colorAcc"
         android:textSize="20sp"
         android:textStyle="italic|bold"
-        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_selectwakeup" />
