--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -11,7 +11,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
         android:elevation="8dp"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp"
+        android:background="@android:color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
