--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -38,7 +38,12 @@
         <item
             android:id="@+id/nav_notifications"
             android:icon="@drawable/ic_notifications"
-            android:title="Notifications"/>
+            android:title="@string/notifications"/>
+
+        <item
+            android:id="@+id/nav_deleteaccount"
+            android:icon="@drawable/ic_priority_high"
+            android:title="@string/delete_my_account"/>
 
         <item
             android:id="@+id/nav_logout"
