--- a/app/src/main/res/layout/card_meal_main.xml
+++ b/app/src/main/res/layout/card_meal_main.xml
@@ -1,28 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_margin="8dp"--><!--android:elevation="8dp"--><!--app:cardCornerRadius="10dp">-->
+
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
+    android:id="@+id/recyclerview_fooditems"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="10dp"
-    android:elevation="8dp">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    tools:context="com.elenaneacsu.healthmate.screens.main.MainFragment" />
 
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview_fooditems"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context="com.elenaneacsu.healthmate.screens.main.MainFragment">
-
-        </android.support.v7.widget.RecyclerView>
-
-    </LinearLayout>
-
-
-</android.support.v7.widget.CardView>
+    <!--</android.support.v7.widget.CardView>-->
