--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -78,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textview_protein" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textview_advice"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
